Optimize image sizes and fix layout bugs

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -504,7 +504,7 @@ main {
    display: flex;
    flex-direction: row;
    align-items: center;
-   width: 320%;
+   width: 100%;
 }
 
 .exec-card:hover {
